--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <div class="col-xl-3 col-lg-2">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="img/logo.png" alt="">
+                                        <img src="img/logo1.gif" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -52,22 +52,18 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">Главная</a></li>
-                                            <li><a href="jobs.html">Лицензии</a></li>
+                                            <li><a href="licenses.html">Лицензии</a></li>
                                             <li><a href="#">Услуги <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
-                                                    <li><a href="candidate.html">Интернет </a></li>
-                                                    <li><a href="job_details.html">Телевидение </a></li>
-                                                    <li><a href="elements.html">Интернет+ТВ</a></li>
+                                                    <li><a href="internet.html">Интернет </a></li>
+                                                    <li><a href="tv.html">Телевидение </a></li>
+                                                    <li><a href="internet_tv.html">Интернет+ТВ</a></li>
                                                     <li><a href="shop.html">Магазин</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="subscriber.html">Абонентам</a></li>
+                                            <li><a href="contact.html">Контакты</a></li>
+                                            <li><a href="gratitude.html">Благодарности</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -75,10 +71,10 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="phone_num d-none d-xl-block">
-                                        <a href="#">Log in</a>
+                                        <a href="#">Войти</a>
                                     </div>
                                     <div class="d-none d-lg-block">
-                                        <a class="boxed-btn3" href="#">Post a Job</a>
+                                        <a class="boxed-btn3" href="#">Зарегистрироваться</a>
                                     </div>
                                 </div>
                             </div>
@@ -101,11 +97,11 @@
                 <div class="row align-items-center">
                     <div class="col-lg-7 col-md-6">
                         <div class="slider_text">
-                            <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">4536+ Jobs listed</h5>
-                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Find your Dream Job</h3>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">We provide online instant cash loans with quick approval that suit your term length</p>
+                            <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">Вермонт-ИТ</h5>
+                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">21 год Онлайн</h3>
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">Мы предоставляем высокоскоростной интернет с симметричным каналом до 1000 Мбит/с</p>
                             <div class="sldier_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
-                                <a href="#" class="boxed-btn3">Upload your Resume</a>
+                                <a href="#" class="boxed-btn3">Online консультант</a>
                             </div>
                         </div>
                     </div>
@@ -113,7 +109,7 @@
             </div>
         </div>
         <div class="ilstration_img wow fadeInRight d-none d-lg-block text-right" data-wow-duration="1s" data-wow-delay=".2s">
-            <img src="img/banner/illustration.png" alt="">
+            <img src="img/banner/illustration1.png" alt="">
         </div>
     </div>
     <!-- slider_area_end -->
